<resources>
    <string name="app_name">TicTacToe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_title">ABOUT</string>
    <string name="about_text">Version: 1.0.0\n
        Developer: mafl7580
    </string>
    <string name="play_button">PLAY</string>
    <string name="about_button">ABOUT</string>
    <string name="title_text">TIC TAC TOE</string>
    <string name="player1_edit">Name Spieler 1 eingeben</string>
    <string name="player2_edit">Name Spieler 2 eingeben</string>
</resources>